--- a/styles/general.css
+++ b/styles/general.css
@@ -6,5 +6,11 @@
 }
 
 body {
+  width: 100vw;
   background-color: rgba(0,0,0,0.6);
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0; /* remove default body margin */
 }
