--- a/styles/home/homePage.css
+++ b/styles/home/homePage.css
@@ -1,5 +1,24 @@
+main {
+  width: 100%;
+  overflow: hidden;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+img.fullscreen {
+  width: 100vw;   /* stretches to full viewport width */
+  height: 100vh;  /* stretches to full viewport height */
+  object-fit: cover;
+}
+
+/*first quote of the homePage (contains the image of the mountains and a few quotes)*/
 .first-quote-and-image-container {
-  width: 100vw;
+  width: 100%;
   height: 550px;
   margin-top: 110px;
   margin-bottom: 250px;
@@ -10,111 +29,54 @@
 }
 
 .first-quote-image {
-  width: 100vw;
+  aspect-ratio: 16 / 9;    /* Keeps proportions */
+  width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+@media(max-width: 600px) {
+  .first-quote-and-image-container {
+    height: 400px;
+  }
+
 }
 
 .first-quote-container {
   position: absolute;
   width: 650px;
+  color: white;
+  /*
   background: linear-gradient(to bottom, rgb(120, 120, 120), rgba(0, 0, 0,0.9) 70%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  */
   text-align: center;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .first-quote {
-  font-size: 60px;
+  font-size: clamp(1.5rem, 6.5vw, 3.5rem); 
   font-weight: 500;
   font-style: italic;
 }
 
 .coach-sona-img {
   position: absolute;
-  bottom: -150px;
+  bottom: -170px;
   width: 270px;
   height: 270px;
   border-radius: 150px;
   object-fit: cover;
 }
 
-@media(max-width: 858px) {
-  .first-quote-and-image-container {
-    width: 100vw;
-  }
-  .first-quote-image {
-  width: 100vw;
-  height: 100%;
-}
-}
 
-@media(max-width: 643px) {
-  .first-quote-and-image-container {
-    width: 130vw;
-  }
-  .first-quote-image {
-  width: 130vw;
-  height: 100%;
-}
-  .first-quote {
-  font-size: 55px;
-}
-}
-@media(max-width: 575px) {
-  .first-quote-and-image-container {
-    width: 170vw;
-  }
-  .first-quote-image {
-  width: 170vw;
-  height: 100%;
-}
-  .first-quote {
-  font-size: 55px;
-}
-}
-@media(max-width: 495px) {
-  .first-quote-and-image-container {
-    width: 170vw;
-  }
-  .first-quote-image {
-  width: 170vw;
-  height: 100%;
-}
-  .first-quote {
-  font-size: 50px;
-}
-}
-@media(max-width: 433px) {
-  .first-quote-and-image-container {
-    width: 190vw;
-  }
-  .first-quote-image {
-  width: 190vw;
-  height: 100%;
-}
-  .first-quote {
-  font-size: 45px;
-}
-}
-@media(max-width: 373px) {
-  .first-quote-and-image-container {
-    width: 210vw;
-  }
-  .first-quote-image {
-  width: 210vw;
-  height: 100%;
-}
-  .first-quote {
-  font-size: 40px;
-}
-}
-
+/*Gives a brief introduction on what Life Coaching is*/
 .life-coaching-introduction-container {
-  width: 90%;
-  height: 20%;
+  width: 100%;
+  height: 100%;
   margin-top: 120px;
-  margin-left: 40px;
+  margin-right: 20px;
   padding-top: 6px;
   display: flex;
   border-top: 3px solid white;
@@ -139,7 +101,8 @@
 
 .life-coaching-introduction-image {
   width: 50%;
-  height: 500px;
+  height: auto;
+  max-height: 500px;
   box-shadow: 0 0 45px rgba(0,0,0,1)
 }
 
@@ -148,74 +111,102 @@
 }
 
 .life-coaching-introduction-title {
-  font-size: 25px;
+  font-size: 3vw;
   font-weight: bold;
   text-shadow: 0 0 10px rgba(223,223,233,0.55);
 }
 
 .life-coaching-introduction-description {
-  font-size: 26px;
+  font-size: 2vw;
   margin-top: 10px;
   font-family: "Nunito Sans", sans-serif;
   font-weight: 500;
 }
-@media(max-width:1454px) {
+
+@media(max-width: 1069px) {
   .life-coaching-introduction-description {
-    font-size: 25px;
-  }
-}
-@media(max-width:1328px) {
-  .life-coaching-introduction-description {
-    font-size: 19px;
-  }
-}
-@media(max-width:937px) {
-  .life-coaching-introduction-description {
-    font-size: 16px;
-  }
-}
-@media(max-width:772px) {
-  .life-coaching-introduction-description {
-    font-size: 13px;
-  }
-}
-@media(max-width:575px) {
-  .life-coaching-introduction-container {
-    width: 170%
-  }
-  .life-coaching-introduction-image {
-    margin-left: -9px;
-  }
-  .life-coaching-introduction-title {
-    font-size: 35px;
-  }
-  .life-coaching-introduction-description {
-    font-size: 30px;
+    font-size: 3vw;
   }
 }
 
-
-
-@media(max-width: 575px) {
+@media(max-width: 701px) {
   .life-coaching-introduction-container {
     flex-direction: column;
-    margin-left: 10px;
   }
   .life-coaching-introduction-image {
     width: 100%;
     height: 400px;
   }
   .life-coaching-introduction-text {
-    margin-left: 0px;
+    margin-left: 5px;
   }
   .life-coaching-introduction-title {
     margin-top: 10px;
   }
   .life-coaching-introduction-description {
     line-height: 2;
+    font-size: 4vw;
   }
 }
 
+
 summary {
   cursor: pointer;
+}
+
+
+
+/*States the brief purpose of life coaching*/
+.purpose-of-life-coaching-container {
+  aspect-ratio: 16 / 9;
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
+  margin-bottom: 5px;
+  width: 100%;
+  height: auto;
+}
+
+.purpose-of-life-coaching-content {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.purpose-of-life-coaching-image {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 35px rgba(0,0,0,1)
+}
+
+.purpose-of-life-coaching-text {
+  font-family: "Nunito Sans", sans-serif;
+  position: absolute;
+  left: 5%;
+  top: 10%;
+  color: rgba(255,255,255,0.9);
+  /*
+  background: linear-gradient(to bottom, rgba(0, 0, 0,1) 45%, rgb(188, 188, 188) 60%, rgb(255, 255, 255) 80%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  */
+  font-size: 3vw;
+  font-weight: 300;
+  width: 60%;
+  text-shadow: 0 0 5px rgba(0,0,0,0.9);
+}
+
+@media(max-width: 704px) {
+  .purpose-of-life-coaching-text {
+    font-size: 4vw;
+    width: 75%;
+  }
+}
+@media(max-width: 575px) {
+  .purpose-of-life-coaching-text {
+    font-size: 4.5vw;
+    width: 85%;
+  }
 }
