--- a/styles/home/homePage.css
+++ b/styles/home/homePage.css
@@ -149,6 +149,7 @@ img.fullscreen {
   }
   .life-coaching-introduction-title {
     margin-top: 10px;
+    font-size: 4.5vw;
   }
   .life-coaching-introduction-description {
     line-height: 2;
