--- a/styles/header.css
+++ b/styles/header.css
@@ -145,6 +145,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 25px;
 }
 
 .hamburger-menu-page-option {
