--- a/styles/home/homePage.css
+++ b/styles/home/homePage.css
@@ -100,6 +100,7 @@ img.fullscreen {
 }
 
 .life-coaching-introduction-image {
+  aspect-ratio: 4 / 3;
   width: 50%;
   height: auto;
   max-height: 500px;
