--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,10 @@
 footer {
   width: 100%;
+  position: relative;
 }
 
 .footer-content {
+  position: absolute;
   width: 100%;
   height: 250px;
   background-color: white;
