--- a/styles/home/homePage.css
+++ b/styles/home/homePage.css
@@ -1,4 +1,4 @@
- main {
+main {
   width: 100%;
   overflow: hidden;
 }
@@ -38,7 +38,6 @@ img.fullscreen {
   .first-quote-and-image-container {
     height: 400px;
   }
-
 }
 
 .first-quote-container {
@@ -68,6 +67,14 @@ img.fullscreen {
   height: 270px;
   border-radius: 150px;
   object-fit: cover;
+}
+
+@media(max-width: 600px) {
+  .coach-sona-img {
+    width: 200px;
+    height: 200px;
+    bottom: -130px;
+  }
 }
 
 
@@ -143,7 +150,28 @@ img.fullscreen {
   }
 }
 
-@media(max-width: 701px) {
+@media(max-width: 832px) {
+  .life-coaching-introduction-container {
+    flex-direction: column;
+  }
+  .life-coaching-introduction-image {
+    width: 100%;
+    height: 450px;
+  }
+  .life-coaching-introduction-text {
+    margin-left: 5px;
+  }
+  .life-coaching-introduction-title {
+    margin-top: 10px;
+    font-size: 4.5vw;
+  }
+  .life-coaching-introduction-description {
+    line-height: 2;
+    font-size: 4vw;
+  }
+}
+
+@media(max-width: 710px) {
   .life-coaching-introduction-container {
     flex-direction: column;
   }
@@ -168,6 +196,17 @@ img.fullscreen {
   .life-coaching-introduction-image {
     height: 300px;
   }
+  .logo {
+    width: 120px;
+    height: 120px;
+    bottom: -90px
+  }
+}
+
+@media(max-width: 300px) {
+  .life-coaching-introduction-image {
+    height: 250px;
+  }
 }
 
 
@@ -186,6 +225,12 @@ summary {
   margin-bottom: 5px;
   width: 100%;
   height: auto;
+}
+
+@media(max-width: 600px) {
+  .purpose-of-life-coaching-container {
+    margin-top: 150px;
+  }
 }
 
 .purpose-of-life-coaching-content {
